# cgfx_cubez

./: CMakeLists.txt  cgfx_lab4.cpp
